updated configuration description

--- a/config/download.conf
+++ b/config/download.conf
@@ -1,6 +1,8 @@
 #!/bin/bash
 
-root_dir=$HOME/Projects/CUJAE/
+# directory settings
+
+root_dir=$HOME/Projects/CUJAE/ # ndown root directory
 logfile=$root_dir/logs/download.log
 input_dir=$root_dir/inputs
 download_dir=$HOME/Downloads/cron/
