--- a/config/download.conf
+++ b/config/download.conf
@@ -6,3 +6,7 @@ root_dir=$HOME/Projects/CUJAE/ # ndown root directory
 logfile=$root_dir/logs/download.log
 input_dir=$root_dir/inputs
 download_dir=$HOME/Downloads/cron/
+
+# other settings
+
+bandwidth="5M"
