--- a/config/download.conf
+++ b/config/download.conf
@@ -2,11 +2,15 @@
 
 # directory settings
 
-root_dir=$HOME/Projects/CUJAE/ # ndown root directory
+root_dir=/opt/ # ndown root directory
 logfile=$root_dir/logs/download.log
 input_dir=$root_dir/inputs
-download_dir=$HOME/Downloads/cron/
+download_dir=$HOME/Downloads/
+web_dir=$download_dir/Websites
 
 # other settings
 
 bandwidth="5M"
+user_agent="chrome"
+cache="1024M" # aria2 --disk-cache
+conperserv="16" # aria2 --max-connection-per-server
