corrected default root dir

--- a/config/download.conf
+++ b/config/download.conf
@@ -2,7 +2,7 @@
 
 # directory settings
 
-root_dir=/opt/ # ndown root directory
+root_dir=/opt/ndown # ndown root directory
 logfile=$root_dir/logs/download.log
 input_dir=$root_dir/inputs
 download_dir=$HOME/Downloads/
