changed default config

--- a/config/download.conf
+++ b/config/download.conf
@@ -5,8 +5,8 @@
 root_dir=/opt/ndown # ndown root directory
 logfile=$root_dir/logs/download.log
 input_dir=$root_dir/inputs
-download_dir=$HOME/Downloads/
-web_dir=$download_dir/Websites
+download_dir=$HOME/Downloads/cron
+web_dir=$download_dir/cron/Websites
 
 # other settings
 
