added install process

--- a/examples/download.conf
+++ b/examples/download.conf
@@ -2,15 +2,15 @@
 
 # directory settings
 
-root_dir=/opt/ndown # ndown root directory
-logfile=$root_dir/logs/download.log
+root_dir=/opt/ndown/ # ndown root directory
+logfile=$root_dir/download.log
 input_dir=$root_dir/inputs
 download_dir=$HOME/Downloads/cron
 web_dir=$download_dir/cron/Websites
 
 # other settings
 
-bandwidth="5M"
+bandwidth="4M"
 user_agent="chrome"
 cache="1024M" # aria2 --disk-cache
 conperserv="16" # aria2 --max-connection-per-server
